Allow bootstrap in popup templates

--- a/tmpl/header.html
+++ b/tmpl/header.html
@@ -6,13 +6,15 @@
         <style>
             @font-face {
                 font-family: kanji-stroke-orders;
-                src:         url('{{root}}/ttf/kanji-stroke-orders.ttf');
+                src:         url('{{root}}/fg/ttf/kanji-stroke-orders.ttf');
             }
             @font-face {
                 font-family: vl-gothic-regular;
-                src:         url('{{root}}/ttf/vl-gothic-regular.ttf');
+                src:         url('{{root}}/fg/ttf/vl-gothic-regular.ttf');
             }
         </style>
-        <link rel="stylesheet" href="{{root}}/css/frame.css">
+        <link rel="stylesheet" type="text/css" href="{{root}}/lib/bootstrap-3.3.6-dist/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="{{root}}/lib/bootstrap-3.3.6-dist/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="{{root}}/fg/css/frame.css">
     </head>
     <body>
