--- a/tmpl/kanji.html
+++ b/tmpl/kanji.html
@@ -2,7 +2,7 @@
     {{#with options}}
     <div class="action-bar" data-sequence="{{../sequence}}">
         {{#if enableAnkiConnect}}
-        <a href="#" title="Add Kanji" class="action-add-note disabled" data-mode="kanji" data-index="{{@index}}"><img src="{{../root}}/img/add_kanji.png"></a>
+        <a href="#" title="Add Kanji" class="action-add-note disabled" data-mode="kanji" data-index="{{@index}}"><img src="{{../root}}/fg/img/add_kanji.png"></a>
         {{/if}}
     </div>
     {{/with}}
