--- a/ext/bg/background.html
+++ b/ext/bg/background.html
@@ -3,6 +3,7 @@
 <body>
     <script src="../lib/handlebars.min.js"></script>
     <script src="../lib/dexie.min.js"></script>
+    <script src="js/anki.js"></script>
     <script src="js/templates.js"></script>
     <script src="js/util.js"></script>
     <script src="js/dictionary.js"></script>
