--- a/ext/bg/background.html
+++ b/ext/bg/background.html
@@ -3,7 +3,8 @@
 <body>
     <script src="../lib/handlebars.min.js"></script>
     <script src="../lib/dexie.min.js"></script>
-    <script src="js/anki.js"></script>
+    <script src="js/ankiweb.js"></script>
+    <script src="js/ankiconnect.js"></script>
     <script src="js/templates.js"></script>
     <script src="js/util.js"></script>
     <script src="js/dictionary.js"></script>
