--- a/ext/bg/background.html
+++ b/ext/bg/background.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <body>
     <script src="../lib/handlebars.min.js"></script>
+    <script src="../lib/jquery-2.2.2.min.js"></script>
     <script src="../lib/dexie.min.js"></script>
     <script src="js/ankiweb.js"></script>
     <script src="js/ankiconnect.js"></script>
