--- a/ext/bg/background.html
+++ b/ext/bg/background.html
@@ -5,6 +5,7 @@
     <script src="../lib/dexie.min.js"></script>
     <script src="js/ankiweb.js"></script>
     <script src="js/ankiconnect.js"></script>
+    <script src="js/ankinull.js"></script>
     <script src="js/templates.js"></script>
     <script src="js/util.js"></script>
     <script src="js/dictionary.js"></script>
