--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" type="text/css" href="../lib/bootstrap-3.3.6-dist/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="../lib/bootstrap-3.3.6-dist/css/bootstrap-theme.min.css">
         <style>
-            .options-anki, .options-advanced {
+            .options-anki-general, .options-anki-login, .options-advanced {
                 display: none;
             }
 
@@ -90,7 +90,7 @@
                 <h3>Anki Options</h3>
 
                 <div class="form-group">
-                    <label class="control-label" for="anki-method">Integration method</label>
+                    <label class="control-label" for="anki-method">Connection method</label>
                     <select class="form-control" id="anki-method">
                         <option value="none">None</option>
                         <option value="ankiweb">AnkiWeb</option>
@@ -102,18 +102,14 @@
                     <strong>Unable to Connect</strong><br>
                     Is the <a href="https://foosoft.net/projects/anki-connect">AnkiConnect</a> extension for <a href="http://ankisrs.net/">Anki</a> installed and running? This software is required for Anki-related features.
                 </div>
-                <div class="alert alert-warning error-dlg error-dlg-version">
-                    <strong>Unsupported Version</strong><br>
-                    The installed version of the <a href="https://foosoft.net/projects/anki-connect">AnkiConnect</a> extension for <a href="http://ankisrs.net/">Anki</a> is not compatible with this release; please update it.
-                </div>
 
-                <form class="form-horizontal options-anki-controls">
-                    <div class="form-group">
+                <form class="form-horizontal options-anki-general">
+                    <div class="form-group options-anki-login">
                         <label for="anki-username" class="control-label col-sm-2">Username</label>
                         <div class="col-sm-10"><input type="text" id="anki-username" class="form-control"></div>
                     </div>
 
-                    <div class="form-group">
+                    <div class="form-group options-anki-login">
                         <label for="anki-password" class="control-label col-sm-2">Password</label>
                         <div class="col-sm-10"><input type="password" id="anki-password" class="form-control"></div>
                     </div>
