--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" type="text/css" href="../lib/bootstrap-3.3.6-dist/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="../lib/bootstrap-3.3.6-dist/css/bootstrap-theme.min.css">
         <style>
-            #anki-spinner, #options-anki-general, #options-anki-login, #options-advanced {
+            #anki-spinner, #anki-general, #options-advanced {
                 display: none;
             }
 
@@ -24,7 +24,7 @@
     </head>
     <body>
         <div class="container">
-            <div id="options-general">
+            <div>
                 <h3>General Options</h3>
 
                 <form class="form-horizontal">
@@ -54,7 +54,7 @@
                 </form>
             </div>
 
-            <div id="options-scanning">
+            <div>
                 <h3>Scanning Options</h3>
 
                 <form class="form-horizontal">
@@ -86,7 +86,7 @@
                 </form>
             </div>
 
-            <div id="options-anki">
+            <div>
                 <img src="img/spinner.gif" class="pull-right" id="anki-spinner" alt>
 
                 <h3>Anki Options</h3>
@@ -110,17 +110,15 @@
                     <span>Connection established</span>
                 </div>
 
-                <form class="form-horizontal" id="options-anki-general">
-                    <div id="options-anki-login">
-                        <div class="form-group">
-                            <label for="anki-username" class="control-label col-sm-2">Username</label>
-                            <div class="col-sm-10"><input type="text" id="anki-username" class="form-control"></div>
-                        </div>
+                <form class="form-horizontal" id="anki-general">
+                    <div class="form-group anki-login">
+                        <label for="anki-username" class="control-label col-sm-2">Username</label>
+                        <div class="col-sm-10"><input type="text" id="anki-username" class="form-control anki-credential"></div>
+                    </div>
 
-                        <div class="form-group">
-                            <label for="anki-password" class="control-label col-sm-2">Password</label>
-                            <div class="col-sm-10"><input type="password" id="anki-password" class="form-control"></div>
-                        </div>
+                    <div class="form-group anki-login">
+                        <label for="anki-password" class="control-label col-sm-2">Password</label>
+                        <div class="col-sm-10"><input type="password" id="anki-password" class="form-control anki-credential"></div>
                     </div>
 
                     <div class="form-group">
@@ -133,7 +131,7 @@
                         <div class="col-sm-10"><input type="number" min="1" id="sentence-extent" class="form-control"></div>
                     </div>
 
-                    <div id="options-anki-format">
+                    <div id="anki-format">
                         <ul class="nav nav-tabs col-sm-offset-2 col-sm-10">
                             <li class="active"><a href="#term" data-toggle="tab">Terms</a></li>
                             <li><a href="#kanji" data-toggle="tab">Kanji</a></li>
@@ -198,7 +196,7 @@
                 </form>
             </div>
 
-            <div style="text-align: right;">
+            <div class="pull-right">
                 <small><a href="https://foosoft.net/projects/yomichan-chrome">Homepage</a> &bull; <a href="legal.html">Legal</a></small>
             </div>
         </div>
