--- a/tmpl/term-list.html
+++ b/tmpl/term-list.html
@@ -1,5 +1,5 @@
 {{> header.html}}
 {{#each definitions}}
-{{> term.html root=../root options=../options sequence=../sequence}}
+{{> term.html addable=../addable root=../root options=../options sequence=../sequence}}
 {{/each}}
 {{> footer.html}}
